--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <input type="password" name="password" id="password" placeholder="Enter your password">
             </div>
             <button class="btn-submit">Enter</button>
+            <a href="#" class="sign-up">Don't have an account? Sign up!</a>
         </form>
     </main>
 </body>
